--- a/themes/yilia/source/404.html
+++ b/themes/yilia/source/404.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	
+	<meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
 	<meta charset="UTF-8">
 	<title>404</title>
 </head>
