--- a/themes/yilia/source/404.html
+++ b/themes/yilia/source/404.html
@@ -6,6 +6,6 @@
 	<title>404</title>
 </head>
 <body>
-	<script type="text/javascript" src="http://www.qq.com/404/search_children.js" charset="utf-8"></script>
+	<script type="text/javascript" src="//qzonestyle.gtimg.cn/qzone/hybrid/app/404/search_children.js" charset="utf-8"></script>
 </body>
 </html>
