--- a/source/404/cuterobot.html
+++ b/source/404/cuterobot.html
@@ -624,7 +624,7 @@
     <h1>404</h1>
     <p>
         <span>Page Not Found, Back to </span>
-        <a href="https://blog.diqigan.cn/"><b>HomePage</b></a>
+        <a href="https://miaopei.github.io/"><b>HomePage</b></a>
     </p>
 </div>
 </body>
