--- a/source/404/dokdot/index.html
+++ b/source/404/dokdot/index.html
@@ -49,10 +49,10 @@
 	<div id="footer" class="Footer">
 		<ul class="Footer-menu">
 			<li class="Footer-logoWr vAligner">
-				<a class='Footer-logo vItem' href="https://blog.diqigan.cn/"></a>
+				<a class='Footer-logo vItem' href="https://miaopei.github.io/"></a>
 			</li>
 			<li class="team vAligner">
-				<a class="link-st vItem" href="https://blog.diqigan.cn/">Blog</a>
+				<a class="link-st vItem" href="https://miaopei.github.io/">Blog</a>
 			</li>
 			<li>
 				<a class="link-st" href="https://github.com/seven-steven" target="_blank">GitHub</a>
