--- a/source/404/pure.html
+++ b/source/404/pure.html
@@ -109,7 +109,7 @@
     <div class="buttons-con">
         <div class="action-link-wrap">
             <a onclick="history.back(-1)" class="link-button link-back-button">Go Back</a>
-            <a href="https://blog.diqigan.cn/" class="link-button">Go to Home Page</a>
+            <a href="https://miaopei.github.io/" class="link-button">Go to Home Page</a>
         </div>
     </div>
 </div>
