--- a/source/404/text.html
+++ b/source/404/text.html
@@ -435,7 +435,7 @@
         <div>
             <span>sorry&nbsp;about&nbsp;that!</span>
             <span>
-        <a href="https://blog.diqigan.cn/">
+        <a href="https://miaopei.github.io/">
           <b>return&nbsp;home?</b>
         </a>
       </span>
