--- a/source/404/dokdot/index.html
+++ b/source/404/dokdot/index.html
@@ -55,13 +55,13 @@
 				<a class="link-st vItem" href="https://miaopei.github.io/">Blog</a>
 			</li>
 			<li>
-				<a class="link-st" href="https://github.com/seven-steven" target="_blank">GitHub</a>
+				<a class="link-st" href="https://github.com/miaopei" target="_blank">GitHub</a>
 			</li>
 			<li>
-				<a class="link-st" href="https://www.jianshu.com/u/474f4a8db16f">jianshu</a>
+				<a class="link-st" href="https://www.jianshu.com/u/a5516555e760">jianshu</a>
 			</li>
 			<li class="location last">
-				<a class="link-st" href="mailto:903481591@qq.com">903481591@qq.com</a>
+				<a class="link-st" href="mailto:mrmiaow@163.com">mrmiaow@163.com</a>
 			</li>
 		</ul>
 	</div>	
